@@ -797,6 +797,11 @@ speed_mpn_mu_div_q (struct speed_params *s)
 {
   SPEED_ROUTINE_MPN_MU_DIV_Q (mpn_mu_div_q, mpn_mu_div_q_itch);
 }
+double
+speed_mpn_mupi_div_qr (struct speed_params *s)
+{
+  SPEED_ROUTINE_MPN_MUPI_DIV_QR (mpn_preinv_mu_div_qr, mpn_mu_div_qr_itch);
+}
 
 double
 speed_mpn_sbpi1_bdiv_qr (struct speed_params *s)
